--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- top -->
   <!-- <div class="" style="height: 60px;"></div> -->
-    <div class="top-fixed" data-scroll data-scroll-sticky data-scroll-target="body">
+    <div class="top-fixed" data-scroll data-scroll-sticky data-scroll-target=".body" data-scroll-offset="0">
         <div class="container top-box">
             <div class="row py-3 d-flex justify-content-md-between align-items-center">
                 <div class="col-md-4 col-12 top-title d-flex justify-content-md-start justify-content-center align-items-center">
@@ -68,7 +68,7 @@
       <!-- banner -->
         <div class="container-fluid px-md-5 p-0">
             <div class="container-md container-fluid-md banner-box p-0">
-              <h3 class="text-center about-title" data-scroll data-scroll-speed="1" >00 My Photo</h3>
+              <h3 class="text-center about-title" data-scroll data-scroll-offset="400">My Photo</h3>
                 <div class="row p-0 m-0">
                     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                         <!-- <div class="carousel-indicators">
@@ -137,13 +137,13 @@
       <!-- about -->
       <div class="container-fluid" >
         <div class="container about-box">
-          <h3 class="text-center about-title pb-5 " data-scroll data-scroll-speed="-1" >01 About</h3>
+          <h3 class="text-center about-title pb-5 " data-scroll data-scroll-offset="400" data-scroll-speed="-1" >About</h3>
           <div class="row d-flex justify-content-center align-items-center py-5">
               <div class="col-md-6 col-10 ">
-                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="1">
+                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="1">
                   &emsp;&emsp;Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
                 </p>
-                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-speed="2">
+                <p class="py-3 " style="color: rgb(54, 54, 54);" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
                   &emsp;&emsp;Normally, I like to read websites written by other people, learn their designs, and add my own practice websites in my attempts, hoping to learn more skills in the future.
                 </p>
               </div>
@@ -157,12 +157,12 @@
       <!-- project -->
       <div class="container-fluid ">
         <div class="container ">
-          <h3 class="text-center about-title pb-2" data-scroll data-scroll-speed="-1">02 Project</h3>
+          <h3 class="text-center about-title pb-2" data-scroll data-scroll-offset="400" data-scroll-speed="-1">02 Project</h3>
             <div class="row py-5 d-flex justify-content-around align-items-center project-box">
               <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                 <div class="proj-imgbox">
                   <a href="./assets/ERP.jpg">
-                    <img src="./assets/ERP.jpg" class="w-100" alt="ERP Post">
+                    <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/ERP.jpg" class="w-100" alt="ERP Post">
                     <div class="proj-imgboxtitle">
                       <h3 class="">ERP Post</h3>
                     </div>
@@ -172,7 +172,7 @@
                 <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/namepost.jpg">
-                      <img src="./assets/namepost.jpg" class="w-100" alt="Your Name Post">
+                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/namepost.jpg" class="w-100" alt="Your Name Post">
                       <div class="proj-imgboxtitle">
                         <h3 class="">Your Name Post</h3>
                       </div>
@@ -182,7 +182,7 @@
                 <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/risk.jpg">
-                      <img src="./assets/risk.jpg" class="w-100" alt="Digital Risk Post">
+                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/risk.jpg" class="w-100" alt="Digital Risk Post">
                       <div class="proj-imgboxtitle">
                         <h3 class="">Digital Risk Post</h3>
                       </div>
@@ -192,7 +192,7 @@
                 <div class="col-md-6 col-8 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/HB.jpg">
-                      <img src="./assets/HB.jpg" class="w-100" alt="Handbook">
+                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/HB.jpg" class="w-100" alt="Handbook">
                       <div class="proj-imgboxtitle">
                         <h3 class="">Handbook</h3>
                       </div>
@@ -202,7 +202,7 @@
                 <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/greenhouse.jpg">
-                      <img src="./assets/greenhouse.jpg" class="w-100" alt="Green House Post">
+                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/greenhouse.jpg" class="w-100" alt="Green House Post">
                       <div class="proj-imgboxtitle">
                         <h3 class="">Green House Post</h3>
                       </div>
@@ -212,7 +212,7 @@
                 <div class="col-md-3 col-5 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/dm.jpg">
-                      <img src="./assets/dm.jpg" class="w-100" alt="Name Card">
+                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll src="./assets/dm.jpg" class="w-100" alt="Name Card">
                       <div class="proj-imgboxtitle">
                         <h3 class=" ">Name Card</h3>
                       </div>
@@ -228,14 +228,14 @@
       </div>
       <!-- contact -->
       <div class="container-fluid pb-5">
-        <div class="container contact-box">
-          <h3 class="text-center about-title pb-5">03 Contact</h3>
+        <div class="container about-box">
+          <h3 class="text-center about-title pb-5" data-scroll data-scroll-offset="400">Contact</h3>
             <div class="row">
                 <div class="col-12 d-flex flex-column py-4">
-                  <p class="text-center color-g py-2">Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
-                  <p class="text-center color-g py-2">Line：<span class="color-b">zanki_meteor</span></p>
-                  <p class="text-center color-g py-2">Discord：<span class="color-b">Meteor#3795</span></p>
-                  <p class="text-center color-g py-2">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
+                  <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
+                  <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Line：<span class="color-b">zanki_meteor</span></p>
+                  <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Discord：<span class="color-b">Meteor#3795</span></p>
+                  <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
                 </div>
             </div>
           </div>
