--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                         <a href="#project" class="" data-scroll data-scroll-call="#project">Project</a>
                     </div>
                     <div class="">
+                      <a href="#photo" class="" data-scroll data-scroll-call="#photo">Photo</a>
+                  </div>
+                    <div class="">
                         <a href="#contact" class="" data-scroll data-scroll-call="#contact">Contact</a>                
                     </div>
                 </div>
@@ -68,7 +71,7 @@
       <!-- fontend -->
       <div class="container-md container-fluild fontend-box py-3">
         <div class="row">
-          <div class="col p-0">
+          <div class="col p-1">
             <div class="fontendsize"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" data-scroll-speed="-1">I AM</div>
             <div class="fontendsize text-end"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" data-scroll-speed="1">FRONTEND</div>
             <div class="fontendsize text-center"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" data-scroll-speed="-1">ENGINEER</div>
@@ -89,17 +92,31 @@
       </div>
 
       <!-- about -->
-      <div class="container-fluid" >
+      <div class="container-fluid mb-5" >
         <div class="container-md container-fluid about-box">
-          <!-- <h3 class="text-center about-title color-g pb-5 " data-scroll data-scroll-offset="400" data-scroll-speed="-1" >About</h3> -->
+          <h3 class="text-center about-title color-g " data-scroll data-scroll-offset="100" data-scroll-speed="-1" >About</h3>
           <div class="row d-flex justify-content-center align-items-center py-5">
-              <div class="col-md-6 col-10 ">
-                <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" data-scroll-speed="1">
+              <div class="col-md-6 col-10 py-2">
+                <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="1">
                   Hello! I'm Meteor, a web designer located in Tainan City. I specialize in web design and crafting visual identities.
                 </p>
-                <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" data-scroll-speed="-1">
-                  Normally, I like to read websites written by other people, learn their designs, and add my own practice websites in my attempts, hoping to learn more skills in the future.
-                </p>
+              </div>
+              <div class="col-md-5 col-10 py-2">
+                <div class="about-img" data-scroll data-scroll-offset="400">
+                  <img src="/assets/IMG_2148.JPG" alt="" style="width: 100%;object-fit: cover;">
+                </div>
+              </div>
+            </div>
+            <div class="row py-3">
+              <div class="about-yearbox col-md-6 col-10 py-2" data-scroll>
+                <span class="about-year" data-scroll data-scroll-sticky data-scroll-target=".about-yearbox">
+                  2018</br>
+                  -&nbsp;2022
+                </span>
+              </div>
+              <div class="col-md-6 col-10 py-2">
+                <p class="py-3 color-b" style="font-family: Playfair Display, serif;" data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll-speed="-1">
+                  I graduated from STUST. Typically, I enjoy perusing websites crafted by others, studying their designs, and incorporating elements into my own practice sites as I strive to enhance my skills for the future.                </p>
               </div>
           </div>
         </div>
@@ -118,13 +135,14 @@
       <!-- change -->
       <div class="changeclassend">
         <!-- project -->
-        <div class="container-fluid ">
-          <div class="container ">
+        <div class="container-fluid">
+          <div class="container">
+            <h3 class="text-center Project-title " data-scroll data-scroll-offset="200" data-scroll-speed="-1" >Project</h3>
               <div class="row py-5 d-flex justify-content-around align-items-center project-box">
                 <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                   <div class="proj-imgbox">
                     <a href="./assets/ERP.jpg">
-                      <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/ERP.jpg" class="w-100" alt="ERP Post">
+                      <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" src="./assets/ERP.jpg" class="w-100" alt="ERP Post">
                       <div class="proj-imgboxtitle">
                         <h3 class="">ERP Post</h3>
                       </div>
@@ -134,7 +152,7 @@
                   <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                     <div class="proj-imgbox">
                       <a href="./assets/namepost.jpg">
-                        <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/namepost.jpg" class="w-100" alt="Your Name Post">
+                        <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" src="./assets/namepost.jpg" class="w-100" alt="Your Name Post">
                         <div class="proj-imgboxtitle">
                           <h3 class="">Your Name Post</h3>
                         </div>
@@ -144,7 +162,7 @@
                   <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                     <div class="proj-imgbox">
                       <a href="./assets/risk.jpg">
-                        <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/risk.jpg" class="w-100" alt="Digital Risk Post">
+                        <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" src="./assets/risk.jpg" class="w-100" alt="Digital Risk Post">
                         <div class="proj-imgboxtitle">
                           <h3 class="">Digital Risk Post</h3>
                         </div>
@@ -154,7 +172,7 @@
                   <div class="col-md-6 col-8 p-4" data-scroll data-scroll-speed="1">
                     <div class="proj-imgbox">
                       <a href="./assets/HB.jpg">
-                        <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/HB.jpg" class="w-100" alt="Handbook">
+                        <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" src="./assets/HB.jpg" class="w-100" alt="Handbook">
                         <div class="proj-imgboxtitle">
                           <h3 class="">Handbook</h3>
                         </div>
@@ -164,7 +182,7 @@
                   <div class="col-md-4 col-6 p-4" data-scroll data-scroll-speed="1">
                     <div class="proj-imgbox">
                       <a href="./assets/greenhouse.jpg">
-                        <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" src="./assets/greenhouse.jpg" class="w-100" alt="Green House Post">
+                        <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" src="./assets/greenhouse.jpg" class="w-100" alt="Green House Post">
                         <div class="proj-imgboxtitle">
                           <h3 class="">Green House Post</h3>
                         </div>
@@ -174,7 +192,7 @@
                   <div class="col-md-3 col-5 p-4" data-scroll data-scroll-speed="1">
                     <div class="proj-imgbox">
                       <a href="./assets/dm.jpg">
-                        <img data-scroll data-scroll-offset="400" data-scroll-direction="horizontal" data-scroll src="./assets/dm.jpg" class="w-100" alt="Name Card">
+                        <img data-scroll data-scroll-offset="200" data-scroll-direction="horizontal" data-scroll src="./assets/dm.jpg" class="w-100" alt="Name Card">
                         <div class="proj-imgboxtitle">
                           <h3 class=" ">Name Card</h3>
                         </div>
@@ -184,12 +202,12 @@
               </div>
           </div>
           <div class="downbox top-link">
-            <a href="#banner" data-scroll data-scroll-call="#banner">
+            <a href="#photo" data-scroll data-scroll-call="#photo">
               <div class="down-arrow"></div>
               <div class="down-arrow"></div>
             </a>
           </div>
-          <div class="container my-5"style="height: 100px;" id="banner">
+          <div class="container my-5"style="height: 100px;" id="photo">
             <div class="col-6" style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
             <div class="col-6"></div>
           </div>
@@ -199,6 +217,7 @@
         <!-- banner -->
         <div class="container-fluid px-md-5 p-0">
           <div class="container-md container-fluid banner-box p-0">
+            <h3 class="text-center Project-title color-b py-3" data-scroll data-scroll-offset="100" >Photo</h3>
               <div class="row p-0 m-0">
                   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-touch="true">
                       <!-- <div class="carousel-indicators">
@@ -252,12 +271,12 @@
               </div>
           </div>
           <div class="downbox top-link mt-3">
-            <a href="#conatct" data-scroll data-scroll-call="#conatct">
+            <a href="#contact" data-scroll data-scroll-call="#contact">
               <div class="down-arrow"></div>
               <div class="down-arrow"></div>
             </a>
           </div>
-          <div class="container my-5" id="conatct" data-scroll-id="#conatct"
+          <div class="container my-5" id="contact" data-scroll-id="#contact"
             style="height: 100px;">
             <div class="col-6"
             style="border-right: 1px solid #a5a4a4; height: 70px;"></div>
@@ -266,13 +285,14 @@
         </div>
         <!-- contact -->
         <div class="container-fluid pb-5">
-          <div class="container about-box">
+          <div class="container contact-box">
+            <h3 class="text-center Project-title color-b py-3" data-scroll data-scroll-offset="100" >Contact</h3>
               <div class="row">
                   <div class="col-12 d-flex flex-column py-4">
-                    <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
-                    <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Line：<span class="color-b">zanki_meteor</span></p>
-                    <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Discord：<span class="color-b">Meteor#3795</span></p>
-                    <p class="text-center color-g py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal" >Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
+                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Tel：<a href="tel:0912176038" class="color-b contact-tel">0912176038</a></p>
+                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Line：<span class="color-b">zanki_meteor</span></p>
+                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Discord：<span class="color-b">Meteor#3795</span></p>
+                    <p class="text-center color-b py-2"data-scroll data-scroll-offset="100" data-scroll-direction="horizontal">Mail：<a href="mailto:53065306A@gmail.com" class="color-b contact-tel">53065306A@gmail.com</a></p>
                   </div>
               </div>
             </div>
@@ -291,7 +311,7 @@
 <script>
 year = new Date().getFullYear();
 console.log(year);
-document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 color-g">© ${year} by Meteor.</p>`;
+document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 color-b">© ${year} by Meteor.</p>`;
 </script>
 <!-- scoll -->
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.0/dist/locomotive-scroll.min.js"></script>
@@ -301,6 +321,7 @@ document.querySelector('.footer').innerHTML = `<p class="text-center m-0 py-2 co
         const slowscroll = new LocomotiveScroll({
           el: document.querySelector('.body'), // 滾動效果的作用範圍，整個網站都要滑順的話，直接設定 “body”
           smooth: true,
+          repeat: true,
           lerp: 0.05,
         })
         let links = document.querySelectorAll('.top-link a');
@@ -344,6 +365,11 @@ const observer = new IntersectionObserver((entries) => {
         i.style.borderColor = '#fff9f0';
         i.style.transition = '0.5s';
       });
+      document.querySelectorAll('.about-year').forEach((i)=>{
+        i.style.color = '#fff9f0';
+        i.style.transition = '0.5s';
+      });
+      document.querySelector('.Project-title').style.color = '#fff9f0';
     } else {
       document.querySelector('body').style.background = '#fffdf5';
       document.querySelector('.top-fixed').style.background = 'white';
@@ -363,6 +389,11 @@ const observer = new IntersectionObserver((entries) => {
         i.style.borderColor = '#282f40';
         i.style.transition = '0.5s';
       });
+      document.querySelectorAll('.about-year').forEach((i)=>{
+        i.style.color = '#a5a4a4';
+        i.style.transition = '0.5s';
+      });
+      document.querySelector('.Project-title').style.color = '#a5a4a4';
     }
   });
 });
