--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-md-5 col-10 py-2">
                 <div class="about-img" data-scroll data-scroll-offset="400">
-                  <img src="/assets/me.JPG" alt="" style="width: 100%;object-fit: cover;">
+                  <img src="./assets/me.jpg" alt="" style="width: 100%;object-fit: cover;">
                 </div>
               </div>
             </div>
