--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <div class="container-fluid">
           <div class="container">
             <h3 class="text-center Project-title pb-5" data-scroll data-scroll-offset="100" data-scroll-speed="-1">Project</h3>
-            <div class="row project-box py-2" style="font-size: 1.5rem;font-family: Playfair Display, serif;" data-scroll>
-              <div class="col-md-3"data-scroll>Type</div>
-              <div class="col-md-6"data-scroll>Project</div>
-              <div class="col-md-3"data-scroll>Introduction</div>
+            <div class="row project-box py-2" data-scroll>
+              <div class="col-md-3"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;">Type</div>
+              <div class="col-md-6"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;">Project</div>
+              <div class="col-md-3"data-scroll style="font-size: 1.5rem;font-family: Playfair Display, serif;">Introduction</div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
             <div class="row project-box py-4" style="font-size: 3rem;" data-scroll>
@@ -155,6 +155,12 @@
               <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Design</p></div>
               <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="./assets/namepost.jpg">Poster</a></div>
               <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Ps&Ai</p></div>
+              <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
+            </div>
+            <div class="row project-box py-4" style="font-size: 3rem;" data-scroll>
+              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Web</p></div>
+              <div class="col-md-6 proj-imgbox"><a target="_blank" data-scroll data-scroll-offset="300" href="https://zkmeteor.github.io/Vueindex/#/home">Blog</a></div>
+              <div class="col-md-3"><p style="font-family: Playfair Display, serif;"data-scroll data-scroll-offset="300">Practice</p></div>
               <div class="col-12 proj-line my-2" data-scroll data-scroll-offset="100"></div>
             </div>
 <!--               <div class="row py-5 d-flex justify-content-around align-items-center project-box">
@@ -443,7 +449,7 @@ window.onload = function() {
 };
 </script>
   <!-- img -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" integrity="sha512-7KzSt4AJ9bLchXCRllnyYUDjfhO2IFEWSa+a5/3kPGQbr+swRTorHQfyADAhSlVHCs1bpFdB1447ZRzFyiiXsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
       baguetteBox.run('.proj-imgbox', {
         animation: 'fadeIn',
@@ -457,7 +463,7 @@ window.onload = function() {
             this.style.transform = 'none';
         });
     });
-  </script>
+  </script> -->
   <!-- bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
